recursion.lessons.recursion.tree.Tree.scala.error
Tree:19: error: not found: value legnth
	recule(legnth)
               ^